profilelist1exp/unpackaged/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Require_Org_Annual_Revenue__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Org_Annual_Revenue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Organization_Industry_Certificat__c</fullName>
        <label>Require Organization Industry Certificat</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Organization_Industry_Certificate__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Other_Customers__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Other Customers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Other_Customers__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Other__c</fullName>
        <label>Require Other</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Other__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Percent_Sales_Force__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Percent Sales Force</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Percent_Sales_Force__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Percent_Technical_Prof__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Percent Technical Prof</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Percent_Technical_Prof__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Preferred_Dell_Distr_Partner__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Preferred Dell Distr Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Preferred_Dell_Distr_Partner__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Primary_Channel_Model__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Primary Channel Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Primary_Channel_Model__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Primary_Contact_Aligned__c</fullName>
        <label>Require Primary Contact Aligned</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Primary_Contact_Aligned__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Primary_Customer__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Primary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Primary_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Primary_Routes_to_Market__c</fullName>
        <label>Require Primary Routes to Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Primary_Routes_to_Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Primary_Vertical_Market_Segment__c</fullName>
        <label>Require Primary Vertical Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Primary_Vertical_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Principle_Name__c</fullName>
        <label>Require Principle Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Principle_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Principle_Title__c</fullName>
        <label>Require Principle Title</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Principle_Title__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Product_Focus__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Product Focus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Product_Focus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Product_Revenue__c</fullName>
        <label>Require Product Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Product_Revenue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Referral_Partner__c</fullName>
        <label>Require Referral Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Referral_Partner__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Requested_Features__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Requested Features</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Requested_Features__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Resale_Revenue__c</fullName>
        <label>Require Resale Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Resale_Revenue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Reseller_Tax_ID__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Reseller Tax ID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Reseller_Tax_ID__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Retailer__c</fullName>
        <label>Require Retailer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Retailer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Secondary_Customer__c</fullName>
        <label>Require Secondary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Secondary_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Secondary_Vertical_Market_Segmen__c</fullName>
        <label>Require Secondary Vertical Market Segmen</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Secondary_Vertical_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Service_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Service Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Service_Revenue_Percent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Size_of_Customer_Base__c</fullName>
        <label>Require Size of Customer Base</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Size_of_Customer_Base__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Software_Reseller__c</fullName>
        <label>Require Software Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Software_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Software_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Software Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Software_Revenue_Percent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Solution_Oriented_Reseller__c</fullName>
        <label>Require Solution Oriented Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Solution_Oriented_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_States_Provinces_doing_bus__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require States Provinces doing bus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_States_Provinces_doing_bus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_System_Integrator__c</fullName>
        <label>Require System Integrator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_System_Integrator__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Technology_Partner__c</fullName>
        <label>Require Technology Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Technology_Partner__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Telco__c</fullName>
        <label>Require Telco</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Telco__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Tertiary_Customer__c</fullName>
        <label>Require Tertiary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Tertiary_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Tertiary_Practice_Area__c</fullName>
        <label>Require Tertiary Practice Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Tertiary_Practice_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Top_3_Vendors__c</fullName>
        <label>Require Top 3 Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Top_3_Vendors__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Total_Employees__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Total Employees</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Total_Employees__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Total_marketing_professionals__c</fullName>
        <label>Require Total marketing professionals</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Total_marketing_professionals__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Traditional_Reseller__c</fullName>
        <label>Require Traditional Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Traditional_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_US_Canadian_Provinces__c</fullName>
        <label>Require US Canadian Provinces</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_US_Canadian_Provinces__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Value_Added_Reseller__c</fullName>
        <label>Require Value-Added Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Value_Added_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_eTailer__c</fullName>
        <label>Require eTailer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_eTailer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_tertiary_customer_segment__c</fullName>
        <label>Require tertiary customer segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_tertiary_customer_segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Support_Email__c</fullName>
        <label>SOW Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Show_Agree_Both_Dell_ResellerISV__c</fullName>
        <label>Show Agree Both Dell ResellerISV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Agree_Dell_ISV_Program__c</fullName>
        <label>Show Agree Dell ISV Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Agree_Dell_Partner_Dist_Pro__c</fullName>
        <label>Show Agree Dell Partner Dist Pro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Agree_Dell_Partner_Dist_Sup__c</fullName>
        <label>Show Agree Dell Partner Dist Sup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Agree_Dell_Reseller__c</fullName>
        <label>Show Agree Dell Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Boutique_Firm__c</fullName>
        <label>Show Boutique Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Currently_Selling_Dell__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Currently Selling Dell</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Dell_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Dell Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Currently_Selling_Dell__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Distributor__c</fullName>
        <label>Show Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Export_Compliance_Agreed__c</fullName>
        <label>Show Export Compliance Agreed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Hardware_Reseller__c</fullName>
        <label>Show Hardware Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Hardware_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Hardware Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>